--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
     --search-header-height: 150px;
 }
 
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
     margin: 0;
     display: flex;
@@ -10,8 +14,10 @@ body {
     background-color: #e6e6e6;
 }
 
+/* Sidebar Section */
+
 .sidebar {
-    background-color: #53b5ff;
+    background-color: #46afff;
     margin-top: 0;
     height: 100vh;
     width: var(--side-bar-width);
@@ -20,6 +26,8 @@ body {
     flex-direction: column;
     position: fixed;
 }
+
+/* Header Section */
 
 .search-header,
 .main-content {
@@ -32,44 +40,105 @@ body {
     background-color: #FFFFFF;
     margin-bottom: 0;
     box-shadow: 0 5px 5px -3px #909090;
+    display: grid;
+    grid-template-columns: repeat(10, calc(86% / 10));
+    grid-template-rows: 100px 50px;
+    column-gap: 10px;
 }
 
-.search-box input {
+.header-buttons {
+    width: max(auto, 400px);
+    height: 30px;
+    border: none;
+    background-color: #34a6fe;
+    color: #ffffff;
+    border-radius: 20px;
+}
+
+#new-button.header-buttons {
+
+    grid-column-start: 8;
+    grid-row: 2;
+}
+
+#upload-button.header-buttons {
+
+    grid-column-start: 9;
+    grid-row-start: 2;
+}
+
+#share-button.header-buttons {
+
+    grid-column-start: 10;
+    grid-row-start: 2;
+}
+
+.search-header>form {
+    grid-row: 1;
+    grid-column: 1 / span 7;
+    align-self: start;
+    display: flex;
+    margin-top: 20px;
+}
+
+.search-header>form>button {
+    margin: 10px;
+}
+
+.search-header>form>input {
     border-radius: 20px;
     height: 30px;
-    width: 50%;
-    margin: 25px 0 0 40px;
+    width: 350px;
     padding-left: 15px;
+    align-self: flex-end;
 }
 
+.greeting {
+    grid-row: 2;
+    grid-column: 3;
+}
+
+/* Main Content Section */
 .main-content {
     flex-direction: column;
     margin-top: 10px;
     height: calc(100vh - var(--search-header-height));
     border: none;
-    padding: 15px 15px 0 20px;
+    padding: 20px 15px 20px 20px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 40px repeat(6, 90px);
+    grid-template-columns: 3fr 3fr 2fr;
+    grid-template-rows: 18px repeat(13, 40px);
     column-gap: 15px;
     row-gap: 15px;
     grid-auto-flow: column;
 }
 
-#project-label {
-    grid-column: span 2;
+.label {
+    font-size: 18px;
+    align-self: center;
 
 }
 
+#project-label {
+    grid-column: 1 / 3;
+}
+
 #trending-label {
-    margin-top: 75px;
+    margin-top: 60px;
+    grid-column: 3;
+    grid-row: 8;
+
+}
+
+#announcement-label {
+    grid-column: 3;
 }
 
 .container {
     height: auto;
     width: auto;
     border-left: solid #f29419 5px;
-    grid-row: span 2;
+    grid-row: span 4;
 
 }
 
@@ -81,11 +150,12 @@ body {
 }
 
 #announcements.side-container {
-    grid-row-start: 2;
-    grid-row-end: span 3;
+    grid-column: 3;
+    grid-row: 2 / 8;
 }
 
 #trending.side-container {
-    grid-row-start: 4;
-    grid-row: span 2;
+
+    grid-column: 3;
+    grid-row: 9 / 14;
 }
