--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ body {
     width: calc(100vw - var(--side-bar-width));
     background-color: #FFFFFF;
     margin-bottom: 0;
-    box-shadow: 0 5px 5px -3px #909090;
+    box-shadow: 0 5px 7px -4px #909090;
     display: grid;
     grid-template-columns: repeat(10, calc(86% / 10));
     grid-template-rows: 100px 50px;
@@ -78,14 +78,20 @@ body {
     grid-column: 1 / span 7;
     align-self: start;
     display: flex;
-    margin-top: 20px;
+    margin: 20px 0 0 15px;
 }
 
 .search-header>form>button {
-    margin: 10px;
+    border: none;
+    background-color: #FFFFFF;
+}
+
+.search-icon {
+    width: 25px;
 }
 
 .search-header>form>input {
+    background-color: #ededed;
     border-radius: 20px;
     height: 30px;
     width: 350px;
@@ -96,6 +102,12 @@ body {
 .greeting {
     grid-row: 2;
     grid-column: 3;
+}
+
+.account-icon {
+    align-content: center;
+    width: 40px;
+    height: 100px;
 }
 
 /* Main Content Section */
