--- a/styles.css
+++ b/styles.css
@@ -4,19 +4,19 @@
 }
 
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Noto Sans", sans-serif;
 }
 
 body {
     margin: 0;
     overflow-x: hidden;
-    background-color: #e6e6e6;
+    background-color: #F2E8CF;
 }
 
 /* ------------ Sidebar Section */
 
 .sidebar {
-    background-color: #46afff;
+    background-color: #3F88C5;
     margin-top: 0;
     height: 100vh;
     width: var(--side-bar-width);
@@ -26,15 +26,22 @@ body {
     position: fixed;
 }
 
-.sidebar>h2,
-h3 {
+.sidebar>div>h3 {
     padding-left: 10px;
+}
+
+.sidebar>h2 {
+    border-bottom: #393E41 solid 1.5px;
+    height: auto;
+    margin: 0;
+    padding: 20px 0 40px 10px;
 }
 
 .sidebar-item {
     display: grid;
     align-items: center;
     grid-template-columns: 150px 50px;
+    border-bottom: #393E41 solid 1.5px;
 }
 
 .sidebar-icon {
@@ -52,9 +59,10 @@ h3 {
 .search-header {
     height: var(--search-header-height);
     width: calc(100vw - var(--side-bar-width));
-    background-color: #FFFFFF;
+    background-color: #F2E8CF;
     margin-bottom: 0;
-    box-shadow: 0 5px 7px -4px #909090;
+    box-shadow: 0 5px 7px -4px #626262;
+    /* border-bottom: #3F88C5 solid 2px; */
     display: grid;
     grid-template-columns: repeat(10, calc(86% / 10));
     grid-template-rows: 100px 50px;
@@ -65,7 +73,7 @@ h3 {
     width: max(auto, 400px);
     height: 30px;
     border: none;
-    background-color: #34a6fe;
+    background-color: #00BFB2;
     color: #ffffff;
     border-radius: 20px;
     font-weight: bold;
@@ -143,6 +151,7 @@ h3 {
 }
 
 .label {
+    color: #393E41;
     font-size: 18px;
     align-self: center;
     font-weight: bold;
@@ -151,6 +160,7 @@ h3 {
 }
 
 .side-svg {
+    fill: #393E41;
     height: 30px;
     margin-left: 15px;
 }
@@ -173,7 +183,7 @@ h3 {
 .container {
     height: auto;
     width: auto;
-    border-left: solid #f29419 5px;
+    border-left: solid #B76D68 6px;
     grid-row: span 4;
 
 }
@@ -183,6 +193,10 @@ h3 {
     border-radius: 5px;
     background-color: #FFFFFF;
     box-shadow: 2px 5px 5px -4px #7b7b7b;
+}
+
+.side-container {
+    border: #B76D68 solid 2px;
 }
 
 #announcements.side-container {
