--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ body {
     grid-template-columns: repeat(10, calc(86% / 10));
     grid-template-rows: 100px 50px;
     column-gap: 10px;
+    align-items: center;
 }
 
 .header-buttons {
@@ -97,17 +98,31 @@ body {
     grid-row-start: 2;
 }
 
+
+.greeting-icon {
+
+    grid-row-start: 2;
+    grid-column-start: 2;
+    height: 70px;
+    width: 70px;
+    padding-bottom: 20px;
+}
+
 .search-header>form {
     grid-row: 1;
-    grid-column: 1 / span 7;
+    grid-column: 2 / span 7;
     align-self: start;
     display: flex;
-    margin: 20px 0 0 15px;
+    margin: 30px 0 0 15px;
 }
 
 .search-header>form>button {
     border: none;
-    background-color: #FFFFFF;
+    background-color: #F2E8CF;
+}
+
+.search-header>form>button:hover {
+    cursor: pointer;
 }
 
 .search-icon {
@@ -119,13 +134,14 @@ body {
     border-radius: 20px;
     height: 30px;
     width: 350px;
-    padding-left: 15px;
-    align-self: flex-end;
+    padding-left: 20px;
 }
 
 .greeting {
     grid-row: 2;
-    grid-column: 3;
+    grid-column-start: 3;
+    grid-column-end: span 2;
+
 }
 
 .account-icon {
@@ -183,7 +199,7 @@ body {
 .container {
     height: auto;
     width: auto;
-    border-left: solid #B76D68 6px;
+    border-left: solid #008fbf 6px;
     grid-row: span 4;
 
 }
@@ -196,7 +212,7 @@ body {
 }
 
 .side-container {
-    border: #B76D68 solid 2px;
+    border: #008fbf solid 2px;
 }
 
 #announcements.side-container {
